made header elements consistent; added re-sized images

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
   </head>
   <body> 
-    <div class="header">
+    <header>
 
       <h2> Robert G. Smiles Jr. </h2>
       <h3> Software Developer </h3>
@@ -21,7 +21,7 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="resume.html">Resume</a></li>
       </ul>
-    </div>
+    </header>
 
     <div class="content">
       <p>Hello, my name is Bob Smiles. I am a former attorney turned software developer. As an attorney, my focus was on superior problem-solving and client satisfaction. As a developer, this focus remains the same.</p>
@@ -32,7 +32,7 @@
      
     </div>
     <div>
-      <img class="center-block" src = "images/farmerbobcolor_edited-1.png">
+      <img class="center-block img-responsive" src = "images/strawberries.jpg">
     </div>
 
   </body>
