--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
        <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
   </head>
   <body>
-    <div class="header">
+    <header>
 
       <h2> Robert G. Smiles Jr. </h2>
       <h3> Software Developer </h3>
@@ -22,8 +22,8 @@
         <li><a href="resume.html">Resume</a></li>
         <!--<li><a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li>-->
       </ul>
-    </div>
-    <div class="text-center">
+    </header>
+    <div class="text-center col-xs-12">
       <h3> Please contact me at . . . </h3>
 
       <ul class="list-inline">
