--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </ul>
     </header>
     <div>
-      <img class="center-block" src ="images/rsz_bobnmad.jpg" alt="Photo of Bob Smiles and wife">
+      <img class="center-block img-responsive" src ="images/rsz_bobnmad.jpg" alt="Photo of Bob Smiles and wife">
     </div>
  </body>
 </html>
