--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class="header">
+    <header>
 
       <h2> Robert G. Smiles Jr. </h2>
       <h3> Software Developer </h3>
@@ -18,7 +18,7 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="resume.html">Resume</a></li>
       </ul>
-    </div>
+    </header>
 
     <h3>Some of my projects are below. You can find others at <a href="https://github.com/smilesr" target="_blank">Github</a>.</h3>
 
@@ -26,7 +26,7 @@
 
       <div id="column1">
         <a href="http://development.zone-in-app.divshot.io/#/" target="_blank">
-          <img src="images/6617035.png" alt="image of zone-in application front page" class="image_sizing">
+          <img src="images/zonein.png" alt="image of zone-in application front page" class="image_sizing">
         </a>
         <div id="contentBox1">
         <p>This web application, <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> Zone In</a>, allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.</p>
@@ -44,7 +44,7 @@
       </div>
 
     <div id="column2">
-      <img src="images/screen-shot-9-27-15.png" alt="image of front page of this web site" class="image_sizing">
+      <img src="images/portfolio_shot.jpg" alt="image of front page of this web site" class="image_sizing">
       <div id="contentBox2">
         <p>I taught myself the necessary tools to create this portfolio site.  It was a challenge to code using only the markup and styling languages but it was important to me to learn web page structure first hand.</p>
 
@@ -59,7 +59,7 @@
     
 
     <div id="column3">
-      <a href="https://github.com/smilesr/hotornot" target="_blank"><img src="images/hotornot.png" alt="image of Hot or Not texting app" class="image_sizing"></a>
+      <a href="https://github.com/smilesr/hotornot" target="_blank"><img src="images/hotornot.jpg" alt="image of Hot or Not texting app" class="image_sizing"></a>
 
       <div id="contentBox3">
         <p>This is a texting-based, weather-focused game, <a href="https://github.com/smilesr/hotornot" target="_blank"> Hot Or Not </a>, played on your mobile phone. A user texts the name of a city and state to a Twilio phone number then a text is sent out to all participants asking them to guess the current temperature in that city.</p>
