--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class="header">
+    <header>
 
       <h2> Robert G. Smiles Jr. </h2>
       <h3> Software Developer </h3>
@@ -23,7 +23,7 @@
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-    </div>
+    </header>
 
     <div class = "content">
 
