worked on bad stacking on resume page; and other smaller items: .

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       </ul>
     </header>
     <div class="text-center col-xs-12">
-      <h3> Please contact me at . . . </h3>
+      <p> Please contact me at . . . </p>
 
       <ul class="list-inline">
         <li><div class="boxes"><a href="mailto:smilesr120@gmail.com" target="_blank"><img src="images/emailimage.png" alt="email address for Bob Smiles" id="resizing_email"></a></div></li>
