--- a/resume.html
+++ b/resume.html
@@ -34,52 +34,53 @@
 
     <div class="container-fluid">
       <div class="row">
-        <section class="col-xs-12 col-sm-2 col-sm-offset-1">
+        <section class="col-xs-12 col-sm-4 col-md-2 col-md-offset-1">
         <!--<section class="col-xs-12 col-sm-6 col-md-2 col-md-offset-1">-->
-      <h4> LANGUAGES </h4>
-      <ul>
-        <li> Ruby </li>
-        <li> HTML </li> 
-        <li> CSS </li>
-        <li> Javascript </li>
-      </ul>
-    </section>
-        <section class="col-xs-12 col-sm-2">
+          <h4> LANGUAGES </h4>
+          <ul>
+            <li> Ruby </li>
+            <li> HTML </li> 
+            <li> CSS </li>
+            <li> Javascript </li>
+          </ul>
+        </section>
+        <section class="col-xs-12 col-sm-4 col-md-2">
         <!--<section class="col-xs-12 col-sm-6 col-md-2">-->
-      <h4> WEB FRAMEWORKS </h4>
-      <ul>
-        <li> Ruby on Rails </li>
-        <li> Sinatra </li>
-        <li> Bootstrap3 </li>
-      </ul>
-    </section>
+          <h4> WEB FRAMEWORKS </h4>
+          <ul>
+            <li> Ruby on Rails </li>
+            <li> Sinatra </li>
+            <li> Bootstrap3 </li>
+          </ul>
+        </section>
     <!--<div class="clearfix visible-sm-block"></div>-->
-        <section class="col-xs-12 col-sm-2">
-      <h4> DATABASES </h4>
-      <ul>
-        <li> PostgreSQL </li>
-        <li> SQL </li>
-        <li> SQLite </li>
-      </ul>
-    </section>
-        <section class="col-xs-12 col-sm-2">
-      <h4> VERSION CONTROL </h4>
-      <ul>
-        <li> Git </li>
-        <li> Github </li>
-        <li> Bitbucket </li>
-      </ul>
-    </section>
-        <section class="col-xs-12 col-sm-2">
-      <h4> TOOLS/LIBRARIES/GEMS </h4>
-      <ul>
-        <li> JBuilder </li>
-        <li> Twilio </li>
-        <li> Heroku </li>
-      </ul>
-    </section>
-  </div>
-</div>
+        <section class="col-xs-12 col-sm-4 col-md-2">
+          <h4> DATABASES </h4>
+          <ul>
+            <li> PostgreSQL </li>
+            <li> SQL </li>
+            <li> SQLite </li>
+          </ul>
+        </section>
+        <div class="clearfix visible-sm-block"></div>
+        <section class="col-xs-12 col-sm-4 col-md-2">
+          <h4> VERSION CONTROL </h4>
+          <ul>
+            <li> Git </li>
+            <li> Github </li>
+            <li> Bitbucket </li>
+          </ul>
+          </section>
+          <section class="col-xs-12 col-sm-4 col-md-2">
+            <h4> TOOLS/LIBRARIES/GEMS </h4>
+            <ul>
+              <li> JBuilder </li>
+              <li> Twilio </li>
+              <li> Heroku </li>
+            </ul>
+          </section>
+      </div>
+    </div>
 
 
     <h3 id="experience"> RECENT EXPERIENCE </h3>
