--- a/resume.html
+++ b/resume.html
@@ -26,9 +26,9 @@
     </header>
 
     <div class = "content">
-
+      <!-- https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing-->
       <div id = "buttoncenter">
-        <a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing"<button name="button" class="butt-on" target="_blank">Resume-PDF Version</a>
+        <a href="images/resume.pdf"<button name="button" class="butt-on" target="_blank">Resume-PDF Version</a>
       </div>
     <div class="text-center"> <h3> TECHNICAL SKILLS </h3> </div>
 
