fix medium view on resume page

--- a/resume.html
+++ b/resume.html
@@ -33,17 +33,16 @@
 
         <div class="container-fluid">
           <div class="row">
-            <section class="col-xs-12 col-sm-4 col-md-2 col-md-offset-1">
+            <section class="col-xs-12 col-sm-offset-3 col-sm-3 col-md-offset-1 col-md-2 ">
             <!--<section class="col-xs-12 col-sm-6 col-md-2 col-md-offset-1">-->
               <h4> LANGUAGES </h4>
               <ul>
                 <li> Ruby </li> 
-                <li> HTML </li> 
-                <li> CSS </li>
+                <li> HTML/CSS </li> 
                 <li> Javascript </li>
               </ul>
             </section>
-            <section class="col-xs-12 col-sm-4 col-md-2">
+            <section class="col-xs-12 col-sm-3 col-md-2">
             <!--<section class="col-xs-12 col-sm-6 col-md-2">-->
               <h4> WEB FRAMEWORKS </h4>
               <ul>
@@ -52,8 +51,8 @@
                 <li> Bootstrap3 </li>
               </ul>
             </section>
-        <!--<div class="clearfix visible-sm-block"></div>-->
-            <section class="col-xs-12 col-sm-4 col-md-2">
+
+            <section class="col-xs-12 col-sm-offset-1 col-sm-3 col-md-offset-0 col-md-2">
               <h4> DATABASES </h4>
               <ul>
                 <li> PostgreSQL </li>
@@ -61,8 +60,8 @@
                 <li> SQLite </li>
               </ul>
             </section>
-            <div class="clearfix visible-sm-block"></div>
-            <section class="col-xs-12 col-sm-4 col-md-2">
+
+            <section class="col-xs-12 col-sm-3 col-md-2">
               <h4> VERSION CONTROL </h4>
               <ul>
                 <li> Git </li>
@@ -70,8 +69,8 @@
                 <li> Bitbucket </li>
               </ul>
               </section>
-              <section class="col-xs-12 col-sm-4 col-md-2">
-                <h4> TOOLS/LIBRARIES/GEMS </h4>
+              <section class="col-xs-12 col-sm-offset-1 col-sm-3 col-md-offset-0 col-md-2">
+                <h4> OTHER TOOLS </h4>
                 <ul>
                   <li> JBuilder </li>
                   <li> Twilio </li>
