--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,10 @@
    <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
     <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+   <link  href="http://fonts.googleapis.com/css?family=Cabin:400,500,600,bold" rel="stylesheet" type="text/css" >
+    <link  href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold" rel="stylesheet" type="text/css" >
+  <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">  -->
+    <link rel="stylesheet" type="text/css" href="styles/portfolio.css"
   </head>
   <body>
     <header>
@@ -20,62 +24,34 @@
       </ul>
     </header>
 
-    <h3>Some of my projects are below. You can find others at <a href="https://github.com/smilesr" target="_blank">Github</a>.</h3>
-
     <div class="content">
 
-      <div id="column1">
-        <a href="http://development.zone-in-app.divshot.io/#/" target="_blank">
-          <img src="images/zonein.png" alt="image of zone-in application front page" class="image_sizing">
+      <h1> PORTFOLIO PAGE </h1>
+      <p> Push desired button below </p>
+
+      <div class="buttons">
+
+      <div id="pagegradient"></div>
+        <a class="button" href="apps.html">
+          <span>APPS</span>
         </a>
-        <div id="contentBox1">
-        <p>This web application, <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> Zone In</a>, allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.</p>
 
-        <p>The app was written in approximately two weeks. My teammate coded the front-end using Javascript, Angular and jQuery.  I wrote the back-end using the following tools:        </p>
-        <ul>
-          <li>Ruby on Rails</li>
-          <li>Ruby</li>
-          <li>PostgreSQL</li>
-          <li>Heroku</li>
-          <li>JBuilder</li>
-        </ul>
-       </div>
+      <div id="pagegradient"></div>
+        <a class="button" href="https://github.com/smilesr">
+          <span>GITHUB</span>
+        </a>
 
-      </div>
+      <div id="pagegradient"></div>
+        <a class="button" href="code-samples.html">
+          <span>CODESAMPLES</span>
+        </a>
 
-    <div id="column2">
-      <img src="images/portfolio_shot.jpg" alt="image of front page of this web site" class="image_sizing">
-      <div id="contentBox2">
-        <p>I taught myself the necessary tools to create this portfolio site.  It was a challenge to code using only the markup and styling languages but it was important to me to learn web page structure first hand.</p>
-
-        <p> The following tools were used for this website:</p>
-        <ul>
-          <li> Bootstrap3 </li>
-          <li> HTML5 </li>
-          <li> CSS3 </li>
-        </ul>
-      </div>
+   
+      </div> 
     </div>
-    
 
-    <div id="column3">
-      <a href="https://github.com/smilesr/hotornot" target="_blank"><img src="images/hotornot.jpg" alt="image of Hot or Not texting app" class="image_sizing"></a>
 
-      <div id="contentBox3">
-        <p>This is a texting-based, weather-focused game, <a href="https://github.com/smilesr/hotornot" target="_blank"> Hot Or Not </a>, played on your mobile phone. A user texts the name of a city and state to a Twilio phone number then a text is sent out to all participants asking them to guess the current temperature in that city.</p>
 
-        <p>The app then queries the weather underground API and evaluates all answers. More features to be added.  The following tools have been used so far:</p>
 
-        <ul>
-          <li> Ruby on Rails </li>
-          <li> Ruby </li>
-          <li> Twilio </li>
-          <li> Weather Underground API </li>
-          <li> PostgreSQL </li>
-          <li> Heroku </li>
-        </ul>
-      </div>
-    </div>
-  </div>
  </body>
-</hmtl>
+</hmtl> 
