changed image paths in app.html from absolute to relative

--- a/apps.html
+++ b/apps.html
@@ -21,7 +21,7 @@
       <h1> APPS </h1>
     <section>
       <p class="float-image">
-        <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> <img src="/Users/robertsmiles1/own-projects/portfolio/images/zonein.png" alt="image of zone-in application front page"></a>  
+        <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> <img src="images/zonein.png" alt="image of zone-in application front page"></a>  
         <p class="paragraph-margin"> This web application, <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> Zone In</a>, allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.</p>
           
         <p class="paragraph-margin">The app was written in approximately two weeks as a final project at the Iron Yard Academy. My teammate coded the front-end using Javascript, Angular and jQuery. My back-end code is on <a href="https://github.com/zonein-tiy/zonein">Github</a></p>
@@ -41,7 +41,7 @@
 
     <section>
       <p class="float-image">
-        <img src="/Users/robertsmiles1/own-projects/portfolio/images/portfolio_shot.jpg">
+        <img src="images/portfolio_shot.jpg">
          <p class="paragraph-margin"> I taught myself the necessary tools to create this portfolio site.  It was a challenge to code using only the markup and styling languages but it was important to me to learn web page structure first hand. <p>
 
         <ul>
@@ -57,7 +57,7 @@
 
     <section>
       <p class="float-image">
-        <a href="https://github.com/smilesr/hotornot"><img src="/Users/robertsmiles1/own-projects/portfolio/images/hotornot.jpg"> </a>
+        <a href="https://github.com/smilesr/hotornot"><img src="/images/hotornot.jpg"> </a>
 
         <p class="paragraph-margin"> This is a texting-based, weather-focused game, <a href="https://github.com/smilesr/hotornot" target="_blank"> Hot Or Not </a>, played on your mobile phone. A user texts the name of a city and state to a Twilio phone number then a text is sent out to all participants asking them to guess the current temperature in that city.</p>
 
