fixed minor errors identified in html validator

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
      
     </div>
     <div>
-      <img class="center-block img-responsive" src = "images/strawberries.jpg">
+      <img class="center-block img-responsive" src = "images/strawberries.jpg" alt="Strawberries">
     </div>
 
   </body>
