--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title> Bob Smiles portfolio </title>
     <link rel="stylesheet" type="text/css" href="styles/portfolio.css">
    <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
     <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
    <link  href="http://fonts.googleapis.com/css?family=Cabin:400,500,600,bold" rel="stylesheet" type="text/css" >
     <link  href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold" rel="stylesheet" type="text/css" >
-  <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">  -->
-    <link rel="stylesheet" type="text/css" href="styles/portfolio.css"
+
+    <link rel="stylesheet" type="text/css" href="styles/portfolio.css">
   </head>
   <body>
     <header>
@@ -31,17 +32,17 @@
 
       <div class="buttons">
 
-      <div id="pagegradient"></div>
+      <div class="pagegradient"></div>
         <a class="button" href="apps.html">
           <span>APPS</span>
         </a>
 
-      <div id="pagegradient"></div>
+      <div class="pagegradient"></div>
         <a class="button" href="https://github.com/smilesr">
           <span>GITHUB</span>
         </a>
 
-      <div id="pagegradient"></div>
+      <div class="pagegradient"></div>
         <a class="button" href="code-samples.html">
           <span>CODESAMPLES</span>
         </a>
@@ -54,4 +55,4 @@
 
 
  </body>
-</hmtl> 
+</html> 
