--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title> Bob Smiles resume </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +28,7 @@
     <div class = "content">
       <!-- https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing-->
       <div id = "buttoncenter">
-        <a href="images/resume.pdf"<button name="button" class="butt-on" target="_blank">Resume-PDF Version</a>
+        <a href="images/resume.pdf"> <button name="button" class="butt-on" target="_blank">Resume-PDF Version</a>
       </div>
       <div class="text-center"> <h3> TECHNICAL SKILLS </h3> </div>
 
@@ -107,4 +108,4 @@
     </div>
   </div>
   </body>
-</hmtl>
+</html>
