--- a/apps.html
+++ b/apps.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title> Bob Smiles apps </title>
     <link rel="stylesheet" type="text/css" href="styles/apps.css">
    <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
