--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
     <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -25,20 +26,40 @@
   </head>
 
   <body>
+    <nav class="fixed-nav-bar">
+      <div id="menu" class="menu">
+    <!-- <a class="sitename" href="fixed-navigation-bar.html"></a> -->
+    <!-- Example responsive navigation menu  -->
+ <!--        <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a> -->
+        <ul class="menu-items">
+          <li><a href="/">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="mailto:smilesr120@gmail.com"  target="_blank">Email</a></li>
+          <li><a href="https://github.com/smilesr" target="_blank">Github</a></li>
+        </ul>
+      </div>
+    </nav>
     <header>
 
-      <h2> Robert G. Smiles Jr. </h2>
+      <h2> Bob Smiles </h2>
       <h3> Software Developer </h3>
 
-      <ul class="list-inline text-center">
+<!--       <ul class="list-inline text-center">
         <li><a href="about.html">About Me</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="resume.html">Resume</a></li>
-      </ul>
+      </ul> -->
     </header>
-    <div>
-      <img class="center-block img-responsive" src ="images/rsz_bobnmad.jpg" alt="Photo of Bob Smiles and wife">
+    <div class="image-container">
+      <img class="center-block img-responsive" id="image-pic" src ="images/strawberries.jpg" alt="Photo of Bob Smiles and wife">
+    </div>
+
+    <div class="content">
+      <p>Hello, my name is Bob Smiles. I love to code. I caught the bug with Python and now program mostly in Ruby.  My curiosity and passion have propelled me to learn front-end languages and numerous other web development tools as well.</p>
+      <p>When not coding, I enjoy being outdoors. Tree and plant identification have long been an interest mine.  And when not in the woods, I enjoy growing food in my home garden.  To grow, prepare, and share food with my family, friends, and community gives me great joy.</p>
+     
     </div>
  </body>
 </html>
