Made initial header changes to Portfolio page; linked Portfolio page to the main.css; cleaned up main.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Bob Smiles Webpage </title>
+    <title> Ruby Developer - Bob Smiles - Webpage </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,7 +43,7 @@
     <header>
 
       <h2> Bob Smiles </h2>
-      <h3> Software Developer </h3>
+      <h3> Ruby Developer ~ Software Engineer </h3>
 
 <!--       <ul class="list-inline text-center">
         <li><a href="about.html">About Me</a></li>
