--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,7 @@
     <title> Bob Smiles portfolio </title>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
-    <link  href="http://fonts.googleapis.com/css?family=Cabin:400,500,600,bold" rel="stylesheet" type="text/css" >
-    <link  href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold" rel="stylesheet" type="text/css" >
-        <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-
-    <link rel="stylesheet" type="text/css" href="styles/portfolio.css">
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -23,47 +17,36 @@
     </script>
   </head>
   <body>
+    <nav class="fixed-nav-bar">
+      <div id="menu" class="menu">
+        <ul class="menu-items">
+          <li><a href="/">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="mailto:smilesr120@gmail.com"  target="_blank">Email</a></li>
+          <li><a href="https://github.com/smilesr" target="_blank">Github</a></li>
+        </ul>
+      </div>
+    </nav>
     <header>
-
-      <h2> Robert G. Smiles Jr. </h2>
+      <h2> Bob Smiles </h2>
       <h3> Software Developer </h3>
-
-      <ul class="nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="resume.html">Resume</a></li>
-      </ul>
     </header>
-
     <div class="content">
-
       <h1> PORTFOLIO PAGE </h1>
-      <p> Push desired button below </p>
-
-      <div class="buttons">
-
       <div class="pagegradient"></div>
         <a class="button" href="apps.html">
           <span>APPS</span>
         </a>
-
       <div class="pagegradient"></div>
         <a class="button" href="https://github.com/smilesr">
           <span>GITHUB</span>
         </a>
-
       <div class="pagegradient"></div>
         <a class="button" href="code-samples.html">
           <span>CODESAMPLES</span>
         </a>
-
-   
       </div> 
     </div>
-
-
-
-
  </body>
 </html> 
