revised resume page; deleted un-used image files; revised portfolio page to incorporate Bootstrap grid

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     
     <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 
     <script>
@@ -28,9 +26,6 @@
   <body>
     <nav class="fixed-nav-bar">
       <div id="menu" class="menu">
-    <!-- <a class="sitename" href="fixed-navigation-bar.html"></a> -->
-    <!-- Example responsive navigation menu  -->
- <!--        <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a> -->
         <ul class="menu-items">
           <li><a href="/">Home</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
@@ -45,18 +40,12 @@
       <h2> Bob Smiles </h2>
       <h3> Ruby Developer ~ Software Engineer </h3>
 
-<!--       <ul class="list-inline text-center">
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="resume.html">Resume</a></li>
-      </ul> -->
     </header>
     <div class="image-container">
       <img class="center-block img-responsive" id="image-pic" src ="images/strawberries.jpg" alt="Photo of Bob Smiles and wife">
     </div>
 
-    <div class="content">
+    <div class="content" id="home-page-intro">
       <p>Hello, my name is Bob Smiles. I love to code. I caught the bug with Python and now program mostly in Ruby.  My curiosity and passion have propelled me to learn front-end languages and numerous other web development tools as well.</p>
       <p>When not coding, I enjoy being outdoors. Tree and plant identification have long been an interest mine.  And when not in the woods, I enjoy growing food in my home garden.  To grow, prepare, and share food with my family, friends, and community gives me great joy.</p>
      
