updated resume; deleted un-used pages

--- a/resume.html
+++ b/resume.html
@@ -103,7 +103,7 @@
       </div>
       <div class="resume_experience">
 
-        <a href="images/resume.pdf"> <button name="button" class="butt-on" target="_blank">Resume-PDF Version</a>
+        <a href="images/resume-5-16-r.pdf"> <button name="button" class="butt-on" target="_blank">Resume-PDF Version</a>
 <!--  <button type="button" id="resume_button">
          class="btn btn-default">
             <a href="images/resume.pdf" download='Bob_Smiles_Resume.pdf'>
