fixed typo in description of Birthdate app

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
         <a class="project_link" href="https://github.com/smilesr/birth_date">
           <img class="icon" src="images/birthdate-app-image.png" alt="miscellaneous Ruby code">
           <h4>Birthdate</h4>
-          <p>A command line app that scrapes websites to reveal historical information about your birth date.</p>
+          <p>A web-based app that scrapes websites to reveal historical information about your birth date.</p>
           <p>TOOLS: Ruby + Sinatra + Nokogiri </p>
         </a>
       </section>
