edited description of portfolio on portfolio site to match the readme

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
         <a class="project_link" href="https://github.com/smilesr/smilesr.github.io">
           <img class="icon" id="image-border" src="images/rsz_portfolio-home.png" alt="image of home page of my portfolio">
           <h4>Portfolio</h4>
-          <p>My portfolio website built with responsive web design.</p>
+          <p>My portfolio website built with responsive web design in mind. I hand coded HTML and CSS as well as incorporating the Bootstrap framework.</p>
           <p> TOOLS: HTML + CSS + Bootstrap</p>
         </a>
       </section>
